--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,12 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   flutter_riverpod: ^2.6.1
+  flutter_staggered_grid_view: ^0.7.0
   go_router: ^15.1.3
   intl: ^0.20.2
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   analyzer: 5.13.0
