--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,25 +10,25 @@ dependencies:
   animate_do: ^4.2.0
   card_swiper: ^3.0.1
   dio: ^5.8.0+1
+  drift: ^2.28.2
+  drift_flutter: ^0.2.7
   flutter:
     sdk: flutter
-  flutter_dotenv: ^5.2.1
+  flutter_dotenv: ^6.0.0
   flutter_riverpod: ^2.6.1
   flutter_staggered_grid_view: ^0.7.0
-  go_router: ^15.1.3
+  go_router: ^16.2.4
   intl: ^0.20.2
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.5
   youtube_player_flutter: ^9.1.2
 
 dev_dependencies:
-  analyzer: 5.13.0
-  build_runner: 2.4.13
-  flutter_lints: ^5.0.0
+  analyzer: ^8.2.0
+  build_runner: ^2.8.0
+  drift_dev: ^2.28.3
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
-  isar_generator: ^3.1.0+1
 
 flutter:
   uses-material-design: true
