--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
 dev_dependencies:
   analyzer: ^8.2.0
   build_runner: ^2.8.0
+  change_app_package_name: ^1.5.0
   drift_dev: ^2.28.3
   flutter_lints: ^6.0.0
   flutter_test:
